Исправлено подключение Swagger 2.0
